base/infrastructure/ntfy/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ntfy.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: ntfy
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: ntfy
          port: 80
  tls:
    secretName: production-ntfy-tls
